fixed vertical alignment

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,1 +1,4 @@
 /* Custom styles */
+header {
+  margin-top: -50px;
+}
